log
Wed 08 May 2024 02:39:01 AM UTC: 
 tests:  1|8
total_score: 0/70
137464f
Wed 08 May 2024 02:44:14 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
37cca62
Wed 08 May 2024 02:48:07 AM UTC: 
 treemap.c | 75 ++++++++++++++++++++++++++++++++++-----------------------------
 1 file changed, 41 insertions(+), 34 deletions(-)
 tests:  3|7
total_score: 5/70
5d3ebe4
Wed 08 May 2024 02:58:55 AM UTC: 
 treemap.c | 48 ++++++++++++++++++++----------------------------
 1 file changed, 20 insertions(+), 28 deletions(-)
 tests:  4|7
total_score: 5/70
557c728
Wed 08 May 2024 03:00:58 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
4cf1478
Wed 08 May 2024 03:11:40 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘searchTreeMap’:
treemap.c:81:1: error: control reaches end of non-void function [-Werror=return-type]
   81 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
0ea3402
